[gd_scene load_steps=20 format=3 uid="uid://suy20es06fwc"]

[ext_resource type="PackedScene" uid="uid://dloeormcor3d1" path="res://Scenes/Arenas/basic_arena.tscn" id="1_6hk17"]
[ext_resource type="PackedScene" uid="uid://d38le36cl8cw4" path="res://Scenes/Score Panels/timer_presenter_1.tscn" id="2_duuhq"]
[ext_resource type="PackedScene" uid="uid://b88c8tybxsxgf" path="res://Scenes/Score Panels/result_table_1.tscn" id="3_sucga"]
[ext_resource type="PackedScene" uid="uid://c5gthnnlb4mkp" path="res://Scenes/Managers/match_time_manager.tscn" id="4_7fbut"]
[ext_resource type="PackedScene" uid="uid://dhhpevr07f2sg" path="res://Scenes/Balls/ball_simple.tscn" id="5_g0pi0"]
[ext_resource type="PackedScene" uid="uid://bvvumteyf063l" path="res://Scenes/Discs_Players/disc_one.tscn" id="6_7cgo3"]
[ext_resource type="PackedScene" uid="uid://mry0ko87s2np" path="res://Scenes/Discs_Enemy/enemy_disc.tscn" id="7_p0j2d"]
[ext_resource type="PackedScene" uid="uid://bvxvupynyo5tg" path="res://Scenes/Football Goals/enemy_goal_zone.tscn" id="8_nhh7u"]
[ext_resource type="PackedScene" uid="uid://n8gop7h1ii3n" path="res://Scenes/Football Goals/my_goal_zone.tscn" id="9_r4cmc"]
[ext_resource type="PackedScene" uid="uid://bqj24wsxm32uc" path="res://Scenes/Managers/original_game_manager.tscn" id="10_fyvug"]
[ext_resource type="Script" path="res://Scenes/Managers/original_game_manager.gd" id="11_5xvjd"]
[ext_resource type="PackedScene" uid="uid://dypkrl1b5qfmq" path="res://Scenes/Animations/goal_animation.tscn" id="12_ek5k1"]
[ext_resource type="PackedScene" uid="uid://dsxgrd0yd6xwc" path="res://Scenes/Animations/goal_animation_enemy.tscn" id="13_03hr4"]
[ext_resource type="PackedScene" uid="uid://bfdoc8lb4bnnh" path="res://Scenes/match_ended.tscn" id="14_6w4or"]
[ext_resource type="AudioStream" uid="uid://cbmhtx2dabt0a" path="res://Audio/KickOff.mp3" id="16_uvyim"]
[ext_resource type="AudioStream" uid="uid://w6xa3angrj1m" path="res://Audio/MatchEnded.mp3" id="17_en5nk"]
[ext_resource type="PackedScene" uid="uid://c16b2k00s8871" path="res://Scenes/Score Panels/level_label.tscn" id="18_3p64o"]
[ext_resource type="PackedScene" uid="uid://cntypyj3tblpr" path="res://Scenes/Animations/tutorial.tscn" id="19_wiltn"]
[ext_resource type="PackedScene" uid="uid://blpryk1tgtxcb" path="res://Scenes/Buttons/pause_button_adventure.tscn" id="20_66y5k"]

[node name="level_02" type="Node2D"]

[node name="BasicLevel" type="Node2D" parent="."]

[node name="BasicArena" parent="BasicLevel" instance=ExtResource("1_6hk17")]
position = Vector2(21, 2)

[node name="TimerPresenter1" parent="BasicLevel" instance=ExtResource("2_duuhq")]
offset_left = 1848.0
offset_top = 467.0
offset_right = 1963.0
offset_bottom = 528.0
text = "00 : 00"

[node name="TimerPresenter2" parent="BasicLevel" instance=ExtResource("2_duuhq")]
offset_left = 741.0
offset_top = 623.0
offset_right = 933.0
offset_bottom = 684.0
rotation = -1.5708
text = "02 : 00"

[node name="ResultTableA1" parent="BasicLevel" instance=ExtResource("3_sucga")]
offset_left = 747.0
offset_top = 381.0
offset_right = 796.0
offset_bottom = 442.0
rotation = -1.5708
text = "1
"

[node name="ResultTableA2" parent="BasicLevel" instance=ExtResource("3_sucga")]
offset_left = 1852.0
offset_top = 677.0
offset_right = 1901.0
offset_bottom = 738.0
text = "1
"

[node name="ResultTableB1" parent="BasicLevel" instance=ExtResource("3_sucga")]
offset_left = 750.0
offset_top = 721.0
offset_right = 799.0
offset_bottom = 782.0
rotation = -1.5708
text = "1
"

[node name="ResultTableB2" parent="BasicLevel" instance=ExtResource("3_sucga")]
offset_left = 1849.0
offset_top = 327.0
offset_right = 1898.0
offset_bottom = 388.0
text = "1
"

[node name="MatchTimeManager" parent="BasicLevel" instance=ExtResource("4_7fbut")]
defaultMinutes = 1
defaultSeconds = 0

[node name="SimpleBall" parent="BasicLevel" instance=ExtResource("5_g0pi0")]
position = Vector2(1308, 529)

[node name="PlayerOne" parent="BasicLevel" instance=ExtResource("6_7cgo3")]
position = Vector2(1292, 904)

[node name="EnemyDisc" parent="BasicLevel" instance=ExtResource("7_p0j2d")]
position = Vector2(1298, 145)

[node name="EnemyGoalZone" parent="BasicLevel" instance=ExtResource("8_nhh7u")]
position = Vector2(702, -416)

[node name="MyGoalZone" parent="BasicLevel" instance=ExtResource("9_r4cmc")]
position = Vector2(1283, 966)

[node name="BasicGameManager" parent="BasicLevel" instance=ExtResource("10_fyvug")]
position = Vector2(3, 13)
script = ExtResource("11_5xvjd")
playerScore = 0
enemyScore = 0

[node name="GoalAnimationPlayer" parent="BasicLevel" instance=ExtResource("12_ek5k1")]
position = Vector2(106, 45)

[node name="GoalAnimationEnemy" parent="BasicLevel" instance=ExtResource("13_03hr4")]
position = Vector2(2522, 1107)
rotation = 3.14159

[node name="MatchEnded" parent="BasicLevel" instance=ExtResource("14_6w4or")]
position = Vector2(1238, 525)

[node name="KickOffSound" type="AudioStreamPlayer2D" parent="BasicLevel"]
stream = ExtResource("16_uvyim")

[node name="MatchFinishedSound" type="AudioStreamPlayer2D" parent="BasicLevel"]
stream = ExtResource("17_en5nk")

[node name="LevelLabel" parent="." instance=ExtResource("18_3p64o")]
text = "Level 2"

[node name="Tutorial" parent="." instance=ExtResource("19_wiltn")]
position = Vector2(-288, -42)
json_file_path = "res://Tutorial Texts/level02.json"

[node name="PauseButton" parent="." instance=ExtResource("20_66y5k")]
z_index = 4
offset_left = 2134.0
offset_top = 52.0
offset_right = 2330.0
offset_bottom = 232.0

[connection signal="matchEnded" from="BasicLevel/MatchTimeManager" to="BasicLevel/BasicGameManager" method="_on_match_time_manager_match_ended"]
[connection signal="finished" from="Tutorial" to="BasicLevel/BasicGameManager" method="_on_tutorial_finished"]
