[gd_scene load_steps=22 format=3 uid="uid://c6e3rf6rj54ja"]

[ext_resource type="PackedScene" uid="uid://cv4diekh2nbcv" path="res://AdventureMode/Levels/Founds/challenging_arena_without_obstacle.tscn" id="1_a3qia"]
[ext_resource type="PackedScene" uid="uid://bvxvupynyo5tg" path="res://Scenes/Football Goals/enemy_goal_zone.tscn" id="2_eyo36"]
[ext_resource type="PackedScene" uid="uid://n8gop7h1ii3n" path="res://Scenes/Football Goals/my_goal_zone.tscn" id="3_021l4"]
[ext_resource type="PackedScene" uid="uid://d38le36cl8cw4" path="res://Scenes/Score Panels/timer_presenter_1.tscn" id="4_bbypt"]
[ext_resource type="PackedScene" uid="uid://b88c8tybxsxgf" path="res://Scenes/Score Panels/result_table_1.tscn" id="5_8fyjo"]
[ext_resource type="PackedScene" uid="uid://c5gthnnlb4mkp" path="res://Scenes/Managers/match_time_manager.tscn" id="6_80och"]
[ext_resource type="PackedScene" uid="uid://dhhpevr07f2sg" path="res://Scenes/Balls/ball_simple.tscn" id="7_evsvu"]
[ext_resource type="PackedScene" uid="uid://bgefhxodr8u0o" path="res://Scenes/Discs_Enemy/enemyBoss_disc.tscn" id="8_78018"]
[ext_resource type="PackedScene" uid="uid://dd1hav55yx2cf" path="res://Scenes/GoalKeeper/goal_keeper_static.tscn" id="9_j4uca"]
[ext_resource type="PackedScene" uid="uid://bqj24wsxm32uc" path="res://Scenes/Managers/original_game_manager.tscn" id="10_raxeu"]
[ext_resource type="Script" path="res://Scenes/Managers/original_game_manager.gd" id="11_vq2qy"]
[ext_resource type="PackedScene" uid="uid://dypkrl1b5qfmq" path="res://Scenes/Animations/goal_animation.tscn" id="12_hedhl"]
[ext_resource type="PackedScene" uid="uid://dsxgrd0yd6xwc" path="res://Scenes/Animations/goal_animation_enemy.tscn" id="13_4xmjg"]
[ext_resource type="PackedScene" uid="uid://bfdoc8lb4bnnh" path="res://Scenes/match_ended.tscn" id="14_ex4gn"]
[ext_resource type="AudioStream" uid="uid://cbmhtx2dabt0a" path="res://Audio/KickOff.mp3" id="16_cf1je"]
[ext_resource type="AudioStream" uid="uid://w6xa3angrj1m" path="res://Audio/MatchEnded.mp3" id="17_1q2ue"]
[ext_resource type="PackedScene" uid="uid://tjbtpxmc3h0u" path="res://AdventureMode/DiscSelector/disc_selector.tscn" id="18_08ooj"]
[ext_resource type="PackedScene" uid="uid://cntypyj3tblpr" path="res://Scenes/Animations/tutorial.tscn" id="19_hv82m"]
[ext_resource type="PackedScene" uid="uid://blpryk1tgtxcb" path="res://Scenes/Buttons/pause_button_adventure.tscn" id="20_tf72q"]
[ext_resource type="PackedScene" uid="uid://c16b2k00s8871" path="res://Scenes/Score Panels/level_label.tscn" id="21_luddx"]
[ext_resource type="PackedScene" uid="uid://b78lxfwvaojy5" path="res://AdventureMode/TrohyReward/trophy_reward_champion.tscn" id="29_bw1rv"]

[node name="level_15" type="Node2D"]

[node name="BasicChallengingArenaWithoutObstacle" type="Node2D" parent="."]

[node name="ChallengingArenaWithoutObstacle" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("1_a3qia")]

[node name="EnemyGoalZone" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("2_eyo36")]
position = Vector2(639, -468)

[node name="MyGoalZone" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("3_021l4")]
position = Vector2(1226, 1070)

[node name="TimerPresenter1" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("4_bbypt")]
offset_left = 1894.0
offset_top = 463.0
offset_right = 2009.0
offset_bottom = 524.0
text = "00 : 00"

[node name="TimerPresenter2" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("4_bbypt")]
offset_left = 590.0
offset_top = 618.0
offset_right = 782.0
offset_bottom = 679.0
rotation = -1.5708
text = "02 : 00"

[node name="ResultTableA1" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("5_8fyjo")]
offset_left = 590.0
offset_top = 381.0
offset_right = 639.0
offset_bottom = 442.0
rotation = -1.5708
text = "1
"

[node name="ResultTableA2" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("5_8fyjo")]
offset_left = 1895.0
offset_top = 664.0
offset_right = 1944.0
offset_bottom = 725.0
text = "1
"

[node name="ResultTableB1" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("5_8fyjo")]
offset_left = 588.0
offset_top = 708.0
offset_right = 637.0
offset_bottom = 769.0
rotation = -1.5708
text = "1
"

[node name="ResultTableB2" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("5_8fyjo")]
offset_left = 1894.0
offset_top = 327.0
offset_right = 1943.0
offset_bottom = 388.0
text = "1
"

[node name="MatchTimeManager" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("6_80och")]
defaultMinutes = 3
defaultSeconds = 0

[node name="SimpleBall" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("7_evsvu")]
position = Vector2(1249, 541)

[node name="EnemyDisc" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("8_78018")]
position = Vector2(1255, 250)
difficulty = 2

[node name="GoalKeeperStatic" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("9_j4uca")]
position = Vector2(1247, 96)
speed = 300.0

[node name="BasicGameManager" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("10_raxeu")]
position = Vector2(-41, 46)
script = ExtResource("11_vq2qy")
playerScore = 0
enemyScore = 3

[node name="GoalAnimationPlayer" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("12_hedhl")]
position = Vector2(89, 18)

[node name="GoalAnimationEnemy" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("13_4xmjg")]
position = Vector2(2477, 1076)
rotation = 3.14159

[node name="MatchEnded" parent="BasicChallengingArenaWithoutObstacle" instance=ExtResource("14_ex4gn")]
position = Vector2(1203, 542)

[node name="KickOffSound" type="AudioStreamPlayer2D" parent="BasicChallengingArenaWithoutObstacle"]
stream = ExtResource("16_cf1je")

[node name="MatchFinishedSound" type="AudioStreamPlayer2D" parent="BasicChallengingArenaWithoutObstacle"]
stream = ExtResource("17_1q2ue")

[node name="DiscSelector" parent="." instance=ExtResource("18_08ooj")]
position = Vector2(-7, 0)

[node name="Tutorial" parent="." instance=ExtResource("19_hv82m")]
position = Vector2(-32, 0)
json_file_path = "res://Tutorial Texts/level15.json"

[node name="PauseButton" parent="." instance=ExtResource("20_tf72q")]
offset_left = 2162.0
offset_top = 72.0
offset_right = 2359.0
offset_bottom = 251.0

[node name="LevelLabel" parent="." instance=ExtResource("21_luddx")]
offset_left = -115.0
offset_top = -56.0
offset_right = 860.0
offset_bottom = 232.0
text = "Level 15"

[node name="TrophyReward" parent="." instance=ExtResource("29_bw1rv")]
position = Vector2(1275, 526)

[connection signal="matchEnded" from="BasicChallengingArenaWithoutObstacle/MatchTimeManager" to="BasicChallengingArenaWithoutObstacle/BasicGameManager" method="_on_match_time_manager_match_ended"]
[connection signal="finished" from="DiscSelector" to="BasicChallengingArenaWithoutObstacle/BasicGameManager" method="_on_disc_selector_finished"]
[connection signal="finished" from="Tutorial" to="BasicChallengingArenaWithoutObstacle/BasicGameManager" method="_on_tutorial_finished"]
[connection signal="finished" from="TrophyReward" to="BasicChallengingArenaWithoutObstacle/BasicGameManager" method="_on_trophy_reward_finished"]
